<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlashNote</string>
    <string name="hint_search">Search notes…</string>
    <string name="btn_add">Add Note</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_remind">Set Reminder</string>
    <string name="title_editor">Edit Note</string>
    <string name="title_settings">Settings</string>
    <string name="label_dark_mode">Dark Mode</string>
    <string name="label_font_size">Font Size</string>
    <string name="msg_saved">Note saved</string>
    <string name="msg_deleted">Note deleted</string>
    <string name="msg_empty">Please enter some text</string>
    <string name="msg_reminder_set">Reminder set</string>
    <string name="channel_reminders">Reminders</string>
</resources>
